Refactor: error 반환 형식 수정